style : code cleaned and better header

--- a/index.html
+++ b/index.html
@@ -7,27 +7,22 @@
 
     <title>Hour Finder</title>
 
-    <link rel="stylesheet" href="css/index.css">
-    <script src="js/index.js"></script> <!-- Ensure this script is loaded -->
+    <link rel="stylesheet" href="css/style.css">
+    <script src="js/script.js"></script> <!-- Ensure this script is loaded -->
     <script src="https://cdn.jsdelivr.net/npm/ol@v10.4.0/dist/ol.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/ol@v10.4.0/ol.css">
 
 </head>
 <body>
-
-    <div class="header">
-
-        <header>
-
-            <img src="" alt="Hour Finder" href="index.html">
-
-            <ul><a href="">Contact</a></ul>
-
-            <ul><a href="">Common Hours</a></ul>
-
-        </header>
-
-    </div>
+    <header>
+        <nav>
+            <ul>
+                <li><img src="" alt="Hour Finder" href="index.html"></li>
+                <li><a href="">Contact</a></li>
+                <li><a href="">Common Hours</a></li>
+            </ul>
+        </nav>
+    </header>
     <div id="map">
         <p>Map loading...</p>
     </div>
